--- a/homepage.html
+++ b/homepage.html
@@ -22,9 +22,9 @@
                 <a href="homepage.html"><h1>Daey</h1></a>
             </div>
             <div class="header-icons">
-                <img src="images/icon/search.png" alt="Search" class="icon">
-                <img src="images/icon/user.png" alt="User" class="icon">
-                <img src="images/icon/shopping-bag.png" alt="Cart" class="icon">
+                <img src="assets/icon/search.png" alt="Search" class="icon">
+                <img src="assets/icon/user.png" alt="User" class="icon">
+                <img src="assets/icon/shopping-bag.png" alt="Cart" class="icon">
             </div>
         </div>
     </header>
@@ -49,8 +49,8 @@
                 <div class="product-card">
                     <a href="productlist.html" class="product-image-link">
                         <div class="product-image-wrapper">
-                            <img src="images/tempshirt1.png" alt="Product" class="product-image product-image-1">
-                            <img src="images/tempshirt2.png" alt="Product" class="product-image product-image-2">
+                            <img src="assets/images/tempshirt1.png" alt="Product" class="product-image product-image-1">
+                            <img src="assets/images/tempshirt2.png" alt="Product" class="product-image product-image-2">
                         </div>
                     </a>
                     <h3 class="product-name">Item Name</h3>
@@ -60,8 +60,8 @@
                 <div class="product-card">
                     <a href="productlist.html" class="product-image-link">
                         <div class="product-image-wrapper">
-                            <img src="images/tempshirt1.png" alt="Product" class="product-image product-image-1">
-                            <img src="images/tempshirt2.png" alt="Product" class="product-image product-image-2">
+                            <img src="assets/images/tempshirt1.png" alt="Product" class="product-image product-image-1">
+                            <img src="assets/images/tempshirt2.png" alt="Product" class="product-image product-image-2">
                         </div>
                     </a>
                     <h3 class="product-name">Item Name</h3>
@@ -71,8 +71,8 @@
                 <div class="product-card">
                     <a href="productlist.html" class="product-image-link">
                         <div class="product-image-wrapper">
-                            <img src="images/tempshirt1.png" alt="Product" class="product-image product-image-1">
-                            <img src="images/tempshirt2.png" alt="Product" class="product-image product-image-2">
+                            <img src="assets/images/tempshirt1.png" alt="Product" class="product-image product-image-1">
+                            <img src="assets/images/tempshirt2.png" alt="Product" class="product-image product-image-2">
                         </div>
                     </a>
                     <h3 class="product-name">Item Name</h3>
@@ -82,8 +82,8 @@
                 <div class="product-card">
                     <a href="productlist.html" class="product-image-link">
                         <div class="product-image-wrapper">
-                            <img src="images/tempshirt1.png" alt="Product" class="product-image product-image-1">
-                            <img src="images/tempshirt2.png" alt="Product" class="product-image product-image-2">
+                            <img src="assets/images/tempshirt1.png" alt="Product" class="product-image product-image-1">
+                            <img src="assets/images/tempshirt2.png" alt="Product" class="product-image product-image-2">
                         </div>
                     </a>
                     <h3 class="product-name">Item Name</h3>
@@ -93,8 +93,8 @@
                 <div class="product-card">
                     <a href="productlist.html" class="product-image-link">
                         <div class="product-image-wrapper">
-                            <img src="images/tempshirt1.png" alt="Product" class="product-image product-image-1">
-                            <img src="images/tempshirt2.png" alt="Product" class="product-image product-image-2">
+                            <img src="assets/images/tempshirt1.png" alt="Product" class="product-image product-image-1">
+                            <img src="assets/images/tempshirt2.png" alt="Product" class="product-image product-image-2">
                         </div>
                     </a>
                     <h3 class="product-name">Item Name</h3>
@@ -104,8 +104,8 @@
                 <div class="product-card">
                     <a href="productlist.html" class="product-image-link">
                         <div class="product-image-wrapper">
-                            <img src="images/tempshirt1.png" alt="Product" class="product-image product-image-1">
-                            <img src="images/tempshirt2.png" alt="Product" class="product-image product-image-2">
+                            <img src="assets/images/tempshirt1.png" alt="Product" class="product-image product-image-1">
+                            <img src="assets/images/tempshirt2.png" alt="Product" class="product-image product-image-2">
                         </div>
                     </a>
                     <h3 class="product-name">Item Name</h3>
@@ -115,8 +115,8 @@
                 <div class="product-card">
                     <a href="productlist.html" class="product-image-link">
                         <div class="product-image-wrapper">
-                            <img src="images/tempshirt1.png" alt="Product" class="product-image product-image-1">
-                            <img src="images/tempshirt2.png" alt="Product" class="product-image product-image-2">
+                            <img src="assets/images/tempshirt1.png" alt="Product" class="product-image product-image-1">
+                            <img src="assets/images/tempshirt2.png" alt="Product" class="product-image product-image-2">
                         </div>
                     </a>
                     <h3 class="product-name">Item Name</h3>
@@ -126,8 +126,8 @@
                 <div class="product-card">
                     <a href="productlist.html" class="product-image-link">
                         <div class="product-image-wrapper">
-                            <img src="images/tempshirt1.png" alt="Product" class="product-image product-image-1">
-                            <img src="images/tempshirt2.png" alt="Product" class="product-image product-image-2">
+                            <img src="assets/images/tempshirt1.png" alt="Product" class="product-image product-image-1">
+                            <img src="assets/images/tempshirt2.png" alt="Product" class="product-image product-image-2">
                         </div>
                     </a>
                     <h3 class="product-name">Item Name</h3>
@@ -137,8 +137,8 @@
                 <div class="product-card">
                     <a href="productlist.html" class="product-image-link">
                         <div class="product-image-wrapper">
-                            <img src="images/tempshirt1.png" alt="Product" class="product-image product-image-1">
-                            <img src="images/tempshirt2.png" alt="Product" class="product-image product-image-2">
+                            <img src="assets/images/tempshirt1.png" alt="Product" class="product-image product-image-1">
+                            <img src="assets/images/tempshirt2.png" alt="Product" class="product-image product-image-2">
                         </div>
                     </a>
                     <h3 class="product-name">Item Name</h3>
@@ -148,8 +148,8 @@
                 <div class="product-card">
                     <a href="productlist.html" class="product-image-link">
                         <div class="product-image-wrapper">
-                            <img src="images/tempshirt1.png" alt="Product" class="product-image product-image-1">
-                            <img src="images/tempshirt2.png" alt="Product" class="product-image product-image-2">
+                            <img src="assets/images/tempshirt1.png" alt="Product" class="product-image product-image-1">
+                            <img src="assets/images/tempshirt2.png" alt="Product" class="product-image product-image-2">
                         </div>
                     </a>
                     <h3 class="product-name">Item Name</h3>
@@ -159,8 +159,8 @@
                 <div class="product-card">
                     <a href="productlist.html" class="product-image-link">
                         <div class="product-image-wrapper">
-                            <img src="images/tempshirt1.png" alt="Product" class="product-image product-image-1">
-                            <img src="images/tempshirt2.png" alt="Product" class="product-image product-image-2">
+                            <img src="assets/images/tempshirt1.png" alt="Product" class="product-image product-image-1">
+                            <img src="assets/images/tempshirt2.png" alt="Product" class="product-image product-image-2">
                         </div>
                     </a>
                     <h3 class="product-name">Item Name</h3>
@@ -201,7 +201,7 @@
             <div class="collection-card collection-card-large">
                 <div class="collection-image-wrapper">
                     <img src="images/tempimage.png" alt="Tops" class="collection-image collection-image-1">
-                    <img src="images/tempshirt1.png" alt="Tops" class="collection-image collection-image-2">
+                    <img src="assets/images/tempshirt1.png" alt="Tops" class="collection-image collection-image-2">
                 </div>
                 <div class="collection-info">
                     <h3 class="collection-name">Tops</h3>
