--- a/productDetails.html
+++ b/productDetails.html
@@ -22,9 +22,9 @@
                 <a href="homepage.html"><h1>Daey</h1></a>
             </div>
             <div class="header-icons">
-                <img src="images/icon/search.png" alt="Search" class="icon">
-                <img src="images/icon/user.png" alt="User" class="icon">
-                <img src="images/icon/shopping-bag.png" alt="Cart" class="icon">
+                <img src="assets/icon/search.png" alt="Search" class="icon">
+                <img src="assets/icon/user.png" alt="User" class="icon">
+                <img src="assets/icon/shopping-bag.png" alt="Cart" class="icon">
             </div>
         </div>
     </header>
@@ -35,19 +35,19 @@
             <!-- Left Column - Thumbnails -->
             <div class="product-thumbnails">
                 <div class="thumbnail-item active">
-                    <img src="images/tempshirt1.png" alt="Product View 1" class="thumbnail-image">
+                    <img src="assets/images/tempshirt1.png" alt="Product View 1" class="thumbnail-image">
                 </div>
                 <div class="thumbnail-item">
-                    <img src="images/tempshirt1.png" alt="Product View 2" class="thumbnail-image">
+                    <img src="assets/images/tempshirt1.png" alt="Product View 2" class="thumbnail-image">
                 </div>
                 <div class="thumbnail-item">
-                    <img src="images/tempshirt1.png" alt="Product View 3" class="thumbnail-image">
+                    <img src="assets/images/tempshirt1.png" alt="Product View 3" class="thumbnail-image">
                 </div>
             </div>
 
             <!-- Middle Column - Main Image -->
             <div class="product-main-image">
-                <img src="images/tempshirt1.png" alt="Item Name" id="mainProductImage" class="main-image">
+                <img src="assets/images/tempshirt1.png" alt="Item Name" id="mainProductImage" class="main-image">
             </div>
 
             <!-- Right Column - Product Info -->
@@ -184,8 +184,8 @@
             <div class="related-product-card">
                 <a href="productDetails.html" class="related-product-link">
                     <div class="related-product-image-wrapper">
-                        <img src="images/tempshirt1.png" alt="Item Name" class="related-product-image related-product-image-1">
-                        <img src="images/tempshirt2.png" alt="Item Name" class="related-product-image related-product-image-2">
+                        <img src="assets/images/tempshirt1.png" alt="Item Name" class="related-product-image related-product-image-1">
+                        <img src="assets/images/tempshirt2.png" alt="Item Name" class="related-product-image related-product-image-2">
                     </div>
                 </a>
                 <h3 class="related-product-name">Item Name</h3>
@@ -195,8 +195,8 @@
             <div class="related-product-card">
                 <a href="productDetails.html" class="related-product-link">
                     <div class="related-product-image-wrapper">
-                        <img src="images/tempshirt1.png" alt="Item Name" class="related-product-image related-product-image-1">
-                        <img src="images/tempshirt2.png" alt="Item Name" class="related-product-image related-product-image-2">
+                        <img src="assets/images/tempshirt1.png" alt="Item Name" class="related-product-image related-product-image-1">
+                        <img src="assets/images/tempshirt2.png" alt="Item Name" class="related-product-image related-product-image-2">
                     </div>
                 </a>
                 <h3 class="related-product-name">Item Name</h3>
@@ -205,8 +205,8 @@
             <div class="related-product-card">
                 <a href="productDetails.html" class="related-product-link">
                     <div class="related-product-image-wrapper">
-                        <img src="images/tempshirt1.png" alt="Item Name" class="related-product-image related-product-image-1">
-                        <img src="images/tempshirt2.png" alt="Item Name" class="related-product-image related-product-image-2">
+                        <img src="assets/images/tempshirt1.png" alt="Item Name" class="related-product-image related-product-image-1">
+                        <img src="assets/images/tempshirt2.png" alt="Item Name" class="related-product-image related-product-image-2">
                     </div>
                 </a>
                 <h3 class="related-product-name">Item Name</h3>
