--- a/signUp.html
+++ b/signUp.html
@@ -22,9 +22,9 @@
                 <a href="homepage.html"><h1>Daey</h1></a>
             </div>
             <div class="header-icons">
-                <img src="images/icon/search.png" alt="Search" class="icon">
-                <img src="images/icon/user.png" alt="User" class="icon">
-                <img src="images/icon/shopping-bag.png" alt="Cart" class="icon">
+                <img src="assets/icon/search.png" alt="Search" class="icon">
+                <img src="assets/icon/user.png" alt="User" class="icon">
+                <img src="assets/icon/shopping-bag.png" alt="Cart" class="icon">
             </div>
         </div>
     </header>
