profile/signup/signin

--- a/signUp.html
+++ b/signUp.html
@@ -35,7 +35,8 @@
             <h1 class="login-title">Sign Up</h1>
             <p class="login-description">Sign up for an account to get started.</p>
             
-            <form class="login-form">
+            <form class="login-form" action="signUp.php" method="POST">
+
                 <div class="form-row">
                     <div class="form-group form-group-half">
                         <label for="firstName" class="form-label">First Name</label>
