--- a/logIn.html
+++ b/logIn.html
@@ -35,7 +35,7 @@
             <h1 class="login-title">Log In</h1>
             <p class="login-description">Welcome back to Daey. Please enter your details.</p>
             
-            <form class="login-form">
+            <form class="login-form" action="login.php" method="POST">
                 <div class="form-group">
                     <label for="email" class="form-label">Email</label>
                     <input type="email" id="email" name="email" class="form-input" placeholder="Email" required>
