--- a/signUp.html
+++ b/signUp.html
@@ -14,17 +14,17 @@
     <header class="header">
         <div class="header-top">
             <nav class="nav-left">
-                <a href="#" class="nav-link">Shop <span class="dropdown-arrow">▼</span></a>
-                <a href="#" class="nav-link">About Us</a>
-                <a href="#" class="nav-link">Contact Us</a>
+                <a href="productlist.html" class="nav-link">Shop <span class="dropdown-arrow">▼</span></a>
+                <a href="aboutus.php" class="nav-link">About Us</a>
+                <a href="contactUs.php" class="nav-link">Contact Us</a>
             </nav>
             <div class="logo">
-                <a href="homepage.html"><h1>Daey</h1></a>
+                <a href="homepage.html"><h1>DAEY</h1></a>
             </div>
             <div class="header-icons">
                 <img src="assets/icon/search.png" alt="Search" class="icon">
-                <img src="assets/icon/user.png" alt="User" class="icon">
-                <img src="assets/icon/shopping-bag.png" alt="Cart" class="icon">
+                <a href="profileMain.php"><img src="assets/icon/user.png" alt="User" class="icon"></a>
+                <a href="cart.php"><img src="assets/icon/shopping-bag.png" alt="Cart" class="icon"></a>
             </div>
         </div>
     </header>
